--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -3,8 +3,8 @@ events { worker_connections 1024; }
 
 http {
   map $http_upgrade $connection_upgrade {
-    default   upgrade;
-    ""        close;
+    default    upgrade;
+    ""         close;
   }
 
   server {
@@ -16,50 +16,50 @@ http {
     }
 
     location ^~ /WS/workflowHub/ {
-      proxy_pass         http://$API_INTERNAL_HOST:80;
+      proxy_pass            http://$API_INTERNAL_HOST:80;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
-      proxy_set_header   Upgrade           $http_upgrade;
-      proxy_set_header   Connection        $connection_upgrade;
-      proxy_set_header   Host              $API_INTERNAL_HOST;
-      proxy_set_header   X-Real-IP         $remote_addr;
-      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_redirect     off;
+      proxy_set_header    Upgrade            $http_upgrade;
+      proxy_set_header    Connection        $connection_upgrade;
+      proxy_set_header    Host              $host; # Changed
+      proxy_set_header    X-Real-IP         $remote_addr;
+      proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+      proxy_redirect      off;
     }
 
     location ^~ /API/ {
-      proxy_pass         https://$API_INTERNAL_HOST;
+      proxy_pass            https://$API_INTERNAL_HOST;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
-      proxy_set_header   Host              $API_INTERNAL_HOST;
-      proxy_set_header   X-Real-IP         $remote_addr;
-      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_redirect     off;
+      proxy_set_header    Host              $host; # Changed
+      proxy_set_header    X-Real-IP         $remote_addr;
+      proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+      proxy_redirect      off;
     }
 
     location ^~ /api/ {
-    proxy_pass         https://$API_INTERNAL_HOST/API/;
+      proxy_pass            https://$API_INTERNAL_HOST/API/;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
-      proxy_set_header   Host              $API_INTERNAL_HOST;
-      proxy_set_header   X-Real-IP         $remote_addr;
-      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_redirect     off;
+      proxy_set_header    Host              $host; # Changed
+      proxy_set_header    X-Real-IP         $remote_addr;
+      proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+      proxy_redirect      off;
     }
 
 
     location / {
-      proxy_pass         https://$WEB_INTERNAL_HOST;
+      proxy_pass            https://$WEB_INTERNAL_HOST;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
-      proxy_set_header   Host              $WEB_INTERNAL_HOST;
-      proxy_set_header   X-Real-IP         $remote_addr;
-      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
-      proxy_redirect     off;
+      proxy_set_header    Host              $WEB_INTERNAL_HOST;
+      proxy_set_header    X-Real-IP         $remote_addr;
+      proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+      proxy_redirect      off;
     }
   }
 }
