--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -11,17 +11,16 @@ http {
     listen 80;
     server_name _;
 
-    # Reverted: Proxy Host header for WS back to original $host
     location ^~ /WS/workflowHub {
-      proxy_pass                https://$API_INTERNAL_HOST; # CHANGED: Use HTTPS and no explicit port
+      proxy_pass                https://$API_INTERNAL_HOST;
       proxy_http_version 1.1;
-      proxy_set_header Upgrade  $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-      proxy_set_header Host     $API_INTERNAL_HOST; # CHANGED: Consistent Host header with other API calls
+      proxy_set_header Upgrade             $http_upgrade;
+      proxy_set_header Connection          $connection_upgrade;
+      proxy_set_header Host                $API_INTERNAL_HOST;
       proxy_set_header X-Real-IP           $remote_addr;
       proxy_set_header X-Forwarded-For     $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_ssl_server_name on; # ADDED: Required for HTTPS upstream
+      proxy_ssl_server_name on;
       proxy_redirect            off;
       proxy_read_timeout        86400s;
       proxy_send_timeout        300s;
