--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -10,7 +10,8 @@ http {
   server {
     listen 80;
     server_name _;
-
+    keepalive_timeout 86400s;
+    
     location ^~ /WS/workflowHub {
       proxy_pass                https://$API_INTERNAL_HOST;
       proxy_http_version 1.1;
