--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -25,8 +25,8 @@ http {
       proxy_redirect            off;
     }
     
-    location ^~ /API/ {
-      proxy_pass         https://$API_INTERNAL_HOST;
+     location = /API/github/webhook {
+      proxy_pass         https://$API_INTERNAL_HOST/API/github/webhook;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
       proxy_set_header   Host              $API_INTERNAL_HOST;
@@ -37,10 +37,10 @@ http {
     }
 
     location ^~ /api/ {
-    proxy_pass         https://$API_INTERNAL_HOST/API/;
+    proxy_pass         https://$WEB_INTERNAL_HOST;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
-      proxy_set_header   Host              $API_INTERNAL_HOST;
+      proxy_set_header   Host              $WEB_INTERNAL_HOST;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto $scheme;
